# obshare-cli

./: .gitignore  LICENSE  README.md  README_Zh_CN.md  pyproject.toml  setup.py
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/obshare-cli/: SKILL.md
.claude/skills/obshare-cli/config/: SKILL.md
.claude/skills/obshare-cli/delete/: SKILL.md
.claude/skills/obshare-cli/list/: SKILL.md
.claude/skills/obshare-cli/permission/: SKILL.md
.claude/skills/obshare-cli/upload/: SKILL.md
obsidian-companion/: README.md  main.js  manifest.json  styles.css
obsidian-plugins/: README.md  main.js  manifest.json  progress-utils.js  styles.css
skills/config/: SKILL.md
skills/delete/: SKILL.md
skills/list/: SKILL.md
skills/obshare-cli/: SKILL.md
skills/permission/: SKILL.md
skills/upload/: SKILL.md
src/obshare_cli/: __init__.py  __main__.py  cli.py
src/obshare_cli/core/: __init__.py  api_client.py  cli_runner.py  config.py  converter.py  history.py  media_pipeline.py  obsidian_bridge.py  shared_state.py  uploader.py
src/obshare_cli/tests/: __init__.py  test_api_client.py  test_cli_runner.py  test_core.py  test_full_e2e.py  test_media_pipeline.py  test_obsidian_bridge.py  test_shared_state.py
src/obshare_cli/utils/: __init__.py  converter.py  crypto.py  mermaid.py  output.py
